# lisum-chat

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker_build.sh  docker_run.sh  pyproject.toml
alembic/: env.py
alembic/versions/: add_estimate_table_0d923c4b44aa.py  add_estimate_table_1419df69d2de.py  init_b5fd4e3555cb.py
lisum_chat/: __main__.py  app.py  bot.py  config.py  database.py  dispatcher.py  redmine.py  run.py
lisum_chat/crud/: estimate_crud.py
lisum_chat/markups/: main_markup.py
lisum_chat/models/: __init__.py  enhancement_model.py  estimate_model.py  estimates_model.py  query_model.py  response_model.py
lisum_chat/routers/: main_router.py
lisum_chat/schemas/: redmine_schemas.py
tests/: redmine_test.py
