[tool.poetry]
name = "lisum-chat"
version = "0.1.0"
description = ""
authors = ["honanaipr <honanaipr@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
pytest = "^7.4.4"
black = "^23.12.1"
pre-commit = "^3.6.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lisum_chat = 'lisum_chat.run:run'
